--- a/src/Charts.css
+++ b/src/Charts.css
@@ -9,39 +9,25 @@
 }
 
 .first-row-section {
-  height: 82px; /* x */
-  width: 604.5px; /* 1.5y */
+  height: auto; /* x */
+  width: auto; /* 1.5y */
 }
 
 .second-row-section,
 .third-row-section {
-  height: 225.5px; /* 2.75x */
-  width: 403px; /* y */
+  height: 32vh;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: auto;
+
+  justify-content: center;
+  align-items: center;
+}
+.section .third-row-section {
+  margin-left: 10px;
 }
 
-#dashboard-button {
-  background: linear-gradient(
-    to bottom,
-    #fff 0%,
-    #b8b3b3f9 50%,
-    #fff 100%,
-    #fff 100%
-  ); /* add a gradient background */
-  border: 1px solid #ccc;
-  padding: 5px 10px; /* decrease the padding */
-  height: 35px;
-  width: 130px;
-  margin-top: 20px;
-  margin-left: 80px;
-  margin-right: 340px;
-  margin-bottom: 0px;
-  font-size: 20px; /* decrease the font size */
-  border-radius: 5% / 5%; /* decrease the border radius */
-  box-shadow: inset 0 -3px 6px 0 rgba(0, 0, 0, 0.1),
-    0 2px 4px 0 rgba(0, 0, 0, 0.1); /* add some inner and outer shadows */
-  text-align: center;
-  font-weight: bold;
-}
 #current-date-charts {
   margin-top: 28px;
   font-family: "Open Sans", sans-serif;
