--- a/src/Header.css
+++ b/src/Header.css
@@ -1,55 +1,13 @@
-/* Header.css */
-.header {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  gap: 1rem;
-  align-items: center;
-  background-color: #fff;
-  padding: 1rem;
+/* #container-ch2t {
+  background-color: rgb(7, 7, 214);
   border-radius: 10px;
+}*/
+#header-ch2t {
+  background-color: white;
+  border-radius: 10px;
+  margin: 10px;
 }
-
-.logo-container {
-  display: flex;
-  justify-content: start;
-  gap: 1rem;
+#admin {
+  margin-bottom: 5px;
+  margin-left: 10px;
 }
-.logo-change2twin {
-  margin-right: 750px;
-}
-.logo-change2twin,
-.logo-trygons {
-  width: auto; /* Adjust width automatically */
-  height: 3rem; /* Use scalable units */
-}
-
-.svg {
-  margin-top: 14px;
-  width: 1.5rem;
-  height: 1.5rem;
-  margin-left: 30px;
-}
-#drop-down {
-  margin-left: 20px;
-}
-
-/* Responsive styling */
-@media (max-width: 768px) {
-  .header {
-    grid-template-columns: 1fr;
-  }
-
-  .logo-container {
-    justify-content: center;
-  }
-}
-
-body {
-  background-color: rgb(
-    212,
-    212,
-    249
-  ); /* Example blue color; replace with your desired shade */
-}
-
-/* Responsive styling for the header */
