--- a/src/Maintenance.css
+++ b/src/Maintenance.css
@@ -9,53 +9,28 @@
 }
 
 .first-row-section-maintenace {
-  height: 82px; /* x */
-  width: 604.5px; /* 1.5y */
+  /* height: auto;  */
+  width: 90%; /* 1.5y */
 }
 
 .second-row-section-maintenace,
 .third-row-section-maintenace,
 .fourth-row-section-maintenace {
-  height: 150px; /* 2.75x */
-  width: 1209px; /* y */
+  height: 20vh; /* 2.75x */
+  width: 90%; /* 1.5y */
 }
 
-#dashboard-button {
-  background: linear-gradient(
-    to bottom,
-    #fff 0%,
-    #b8b3b3f9 50%,
-    #fff 100%,
-    #fff 100%
-  ); /* add a gradient background */
-  border: 1px solid #ccc;
-  padding: 5px 10px; /* decrease the padding */
-  height: 35px;
-  width: 130px;
-  margin-top: 20px;
-  margin-left: 80px;
-  margin-right: 340px;
-  margin-bottom: 0px;
-  font-size: 20px; /* decrease the font size */
-  border-radius: 5% / 5%; /* decrease the border radius */
-  box-shadow: inset 0 -3px 6px 0 rgba(0, 0, 0, 0.1),
-    0 2px 4px 0 rgba(0, 0, 0, 0.1); /* add some inner and outer shadows */
-  text-align: center;
-  font-weight: bold;
-}
 #current-date-maintenance {
-  margin-top: 28px;
   font-family: "Open Sans", sans-serif;
   font-size: large;
-  margin-bottom: 0px;
   font-weight: bold;
-  margin-left: 333px;
 }
 
 .section-box-maintenance {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-content: center;
+  height: 15vh;
 }
 
 .content-maintenance {
@@ -63,21 +38,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  border: 3px solid rgb(231, 229, 223);
+  border: 3px solid rgb(215, 220, 243);
   border-radius: 20px;
-  height: 90px;
-  width: 450px;
-  margin-top: 20px;
+  width: 30%;
+  margin-top: 10px;
 }
 .section-box-maintenance p {
   margin: 0;
   padding: 0;
   font-family: "Open Sans", sans-serif;
+  font-weight: bold;
 }
 #pump-filter-countdown {
   font-weight: bold;
   margin-top: 5px;
-  color: #537587;
+  color: rgb(140, 159, 243);
   margin-top: 15px;
 }
