--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,8 @@
 .main-content {
-  /* This assumes that your sidebar is 250px wide */
   background-color: white;
-  /* justify-content: center; */
   border-radius: 10px;
   margin: 10px;
   width: auto;
-  /* height: calc(100vh - 130px);
-  min-height: 330px; */
   min-width: 400;
 }
 body {
@@ -14,5 +10,5 @@ body {
     215,
     220,
     243
-  ); /* Example blue color; replace with your desired shade */
+  ); 
 }
