--- a/src/Calendar.css
+++ b/src/Calendar.css
@@ -1,70 +1,33 @@
-/* .reminder {
-    background-color: #ffecd1;
-    border-radius: 4px;
-    padding: 2px 4px;
-    margin: 2px;
-    font-size: 0.75rem;
-    text-align: center;
-  }
-
- */
-
 .react-calendar {
   width: 80%;
-  max-width: 1300px; /* Increase max-width for a larger calendar */
+  max-width: 1300px; 
   background: white;
   border: 1px solid #a0a096;
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
-  /* height: 20px; */
 }
-
-/* This targets the days in the calendar, increasing padding for more space */
 .react-calendar__month-view__days__day {
   padding: 20px;
 }
-
 .reminder {
   background-color: #79f04d;
   border-radius: 4px;
-  padding: 4px 8px; /* Increased padding for better visibility */
-  margin: 0 0; /* Adjust margin to fit the larger size */
-  font-size: 0.85rem; /* Slightly larger font size */
+  padding: 4px 8px; 
+  margin: 0 0; 
+  font-size: 0.85rem; 
   text-align: center;
-  display: block; /* Make reminders display as block to avoid overflow */
-  white-space: nowrap; /* Ensure the reminder texts do not wrap */
-  overflow: hidden; /* Hide overflow */
-  text-overflow: ellipsis; /* Add ellipsis to overflowing texts */
-  max-width: 250px; /* Limit reminder width */
+  display: block; 
+  white-space: nowrap; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  max-width: 250px; 
 }
 .calendar {
   border: white !important;
 }
-/* .calendarDiv {
-  align-items: center;
-  margin: 20px;
-  font-size: larger;
-  margin-top: 50px;
-} */
-
 .react-calendar {
   width: 70%;
   height: 70vh;
-  /* margin: 3%; */
   margin-left: 18vw;
   margin-top: 10px;
 }
-
-/*
-.modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
-  z-index: 2;
-  border: 1px solid #ccc;
-  box-shadow: 0px 0px 10px #ccc;
-}
-*/
