--- a/src/Charts.css
+++ b/src/Charts.css
@@ -1,4 +1,3 @@
-/* Charts.css */
 .charts-container {
   display: flex;
   flex-direction: column;
@@ -9,8 +8,8 @@
 }
 
 .first-row-section {
-  height: auto; /* x */
-  width: auto; /* 1.5y */
+  height: auto; 
+  width: auto;
 }
 
 .second-row-section,
