--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -136,7 +136,9 @@
   height: 100%;
   border: 3px solid #a4a5dbf9;
   border-radius: 20px;
-  width: 240px;
+  /* width: 240px; */
+  padding-right: 10px;
+  padding-left: 10px;
   font-size: 15px;
 }
 .section-box p {
