--- a/src/History.css
+++ b/src/History.css
@@ -29,9 +29,8 @@
   align-items: center;
 }
 #apply-button {
-  background: rgb(129, 245, 106); /* add a gradient background */
+  background: rgb(129, 245, 106); 
   border: 1px solid #ccc;
-  /* decrease the padding */
   height: 38px;
   width: 100px;
   color: rgb(97, 93, 93);
@@ -39,12 +38,11 @@
   margin-left: 80px;
   margin-right: 340px;
   margin-bottom: 5px; */
-  font-size: 16px; /* decrease the font size */
+  font-size: 16px; 
   border-radius: 5px;
   box-shadow: inset 0 -3px 6px 0 rgba(0, 0, 0, 0.1),
-    0 2px 4px 0 rgba(252, 247, 247, 0.1); /* add some inner and outer shadows */
+    0 2px 4px 0 rgba(252, 247, 247, 0.1); 
   text-align: center;
-
   /* font-weight: bold; */
 }
 
